Set up socket.io

--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,18 @@
 <body>
   <h1>Chat App</h1>
   <p>Welcome to the best app in the world!!!</p>
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    var socket = io();
+
+    socket.on('connect', () => {
+      console.log('Connected to server');
+    });
+
+    socket.on('disconnect', () => {
+      console.log('Disconnected from server.');
+    });
+  </script>
 </body>
 </html>
